--- a/mk8s/03-service/customer-deployment.yaml
+++ b/mk8s/03-service/customer-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v2
 kind: Deployment
 metadata:
   name: customer
+  namespace: engineering
 spec:
   replicas: 2
   selector:
@@ -19,6 +20,22 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
+          failureThreshold: 3
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 3
+          periodSeconds: 5
         env:
         - name: ORDER_SERVICE
           value: "order"
