--- a/devops-k8s/k8s/2-helm/charts/redis/values.yaml
+++ b/devops-k8s/k8s/2-helm/charts/redis/values.yaml
@@ -3,5 +3,6 @@ appImage: redis
 appVersion: alpine
 appReplicas: 1
 containerPort: 6379
+servicePort: 6379
 volumeName: redis-data
 containerMountPath: /data
